--- a/touring-fe/package.json
+++ b/touring-fe/package.json
@@ -17,6 +17,7 @@
     "axios": "^1.12.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "lottie-react": "^2.4.1",
     "lucide-react": "^0.544.0",
     "motion": "^12.23.22",
     "next-themes": "^0.4.6",
