--- a/touring-fe/package.json
+++ b/touring-fe/package.json
@@ -27,6 +27,7 @@
     "react-dom": "^18.3.1",
     "react-resizable-panels": "^3.0.6",
     "react-router-dom": "^6.30.1",
+    "recharts": "^3.2.1",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.13"
