--- a/touring-be/package.json
+++ b/touring-be/package.json
@@ -27,6 +27,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.18.2",
     "morgan": "^1.10.1",
+    "multer": "^2.0.2",
     "nodemailer": "^7.0.9",
     "passport": "^0.7.0",
     "passport-facebook": "^3.0.0",
