--- a/touring-fe/package.json
+++ b/touring-fe/package.json
@@ -25,6 +25,7 @@
     "next-themes": "^0.4.6",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-markdown": "^10.1.0",
     "react-resizable-panels": "^3.0.6",
     "react-router-dom": "^6.30.1",
     "recharts": "^3.2.1",
