--- a/touring-fe/package.json
+++ b/touring-fe/package.json
@@ -22,6 +22,7 @@
     "lottie-react": "^2.4.1",
     "lucide-react": "^0.544.0",
     "motion": "^12.23.22",
+    "multer": "^2.0.2",
     "next-themes": "^0.4.6",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
