--- a/touring-be/package.json
+++ b/touring-be/package.json
@@ -34,6 +34,7 @@
     "passport-google-oauth20": "^2.0.0",
     "passport-local": "^1.0.0",
     "qrcode": "^1.5.4",
+    "speakeasy": "^2.0.0",
     "zod": "^4.1.11"
   },
   "devDependencies": {
