--- a/touring-be/package.json
+++ b/touring-be/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@google/generative-ai": "^0.24.1",
     "@paypal/checkout-server-sdk": "^1.0.3",
     "axios": "^1.12.2",
     "bcrypt": "^6.0.0",
@@ -20,6 +21,7 @@
     "connect-mongo": "^5.1.0",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
+    "dayjs": "^1.11.18",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
     "express-session": "^1.18.2",
@@ -27,15 +29,19 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.18.2",
     "morgan": "^1.10.1",
+    "node-cache": "^5.1.2",
+    "node-fetch": "^3.3.2",
     "nodemailer": "^7.0.9",
     "passport": "^0.7.0",
     "passport-facebook": "^3.0.0",
     "passport-google-oauth20": "^2.0.0",
     "passport-local": "^1.0.0",
+    "polyline": "^0.2.0",
     "qrcode": "^1.5.4",
     "zod": "^4.1.11"
   },
   "devDependencies": {
+    "jest": "^30.2.0",
     "nodemon": "^3.1.0"
   }
 }
