--- a/touring-fe/package.json
+++ b/touring-fe/package.json
@@ -28,6 +28,7 @@
     "clsx": "^2.1.1",
     "framer-motion": "^12.23.24",
     "gsap": "^3.13.0",
+    "lodash": "^4.17.21",
     "lottie-react": "^2.4.1",
     "lucide-react": "^0.544.0",
     "maplibre-gl": "^5.9.0",
@@ -36,6 +37,7 @@
     "ogl": "^1.0.11",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-map4d-map": "^1.3.9",
     "react-resizable-panels": "^3.0.6",
     "react-router-dom": "^6.30.1",
     "sonner": "^2.0.7",
