--- a/touring-fe/package.json
+++ b/touring-fe/package.json
@@ -39,8 +39,8 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hot-toast": "^2.6.0",
-    "react-markdown": "^10.1.0",
     "react-map4d-map": "^1.3.9",
+    "react-markdown": "^10.1.0",
     "react-resizable-panels": "^3.0.6",
     "react-router-dom": "^6.30.1",
     "recharts": "^3.2.1",
@@ -59,6 +59,7 @@
     "eslint-plugin-react-refresh": "^0.4.20",
     "globals": "^16.3.0",
     "tw-animate-css": "^1.3.8",
+    "typescript": "^5.9.3",
     "vite": "^7.1.2"
   }
 }
