--- a/touring-be/package.json
+++ b/touring-be/package.json
@@ -31,9 +31,10 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.18.2",
     "morgan": "^1.10.1",
-    "node-cache": "^5.1.2",
-    "node-fetch": "^3.3.2",
     "multer": "^2.0.2",
+    "node-cache": "^5.1.2",
+    "node-cron": "^4.2.1",
+    "node-fetch": "^3.3.2",
     "nodemailer": "^7.0.9",
     "passport": "^0.7.0",
     "passport-facebook": "^3.0.0",
