--- a/touring-fe/package.json
+++ b/touring-fe/package.json
@@ -36,6 +36,7 @@
     "multer": "^2.0.2",
     "next-themes": "^0.4.6",
     "ogl": "^1.0.11",
+    "prop-types": "^15.8.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hot-toast": "^2.6.0",
