--- a/touring-be/package.json
+++ b/touring-be/package.json
@@ -31,9 +31,9 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.18.2",
     "morgan": "^1.10.1",
+    "multer": "^2.0.2",
     "node-cache": "^5.1.2",
     "node-fetch": "^3.3.2",
-    "multer": "^2.0.2",
     "nodemailer": "^7.0.9",
     "passport": "^0.7.0",
     "passport-facebook": "^3.0.0",
@@ -41,6 +41,7 @@
     "passport-local": "^1.0.0",
     "polyline": "^0.2.0",
     "qrcode": "^1.5.4",
+    "socket.io": "^4.8.1",
     "speakeasy": "^2.0.0",
     "zod": "^4.1.11"
   },
