--- a/touring-fe/package.json
+++ b/touring-fe/package.json
@@ -45,6 +45,7 @@
     "react-resizable-panels": "^3.0.6",
     "react-router-dom": "^6.30.1",
     "recharts": "^3.2.1",
+    "socket.io-client": "^4.8.1",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.13",
