--- a/touring-fe/package.json
+++ b/touring-fe/package.json
@@ -40,6 +40,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hot-toast": "^2.6.0",
+    "react-icons": "^5.5.0",
     "react-map4d-map": "^1.3.9",
     "react-markdown": "^10.1.0",
     "react-resizable-panels": "^3.0.6",
