--- a/.gitignore
+++ b/.gitignore
@@ -33,16 +33,31 @@ touring-be/out/
 # Environment Variables
 # ============================================
 .env
+.env.*
+!.env.example
 .env.local
 .env.development.local
 .env.test.local
 .env.production.local
 .env.backup
 touring-fe/.env
+touring-fe/.env.*
+!touring-fe/.env.example
 touring-fe/.env.local
 touring-be/.env
+touring-be/.env.*
+!touring-be/.env.example
 touring-be/.env.local
 ai/.env
+ai/.env.*
+!ai/.env.example
+
+# ============================================
+# Docker
+# ============================================
+docker-compose.override.yml
+.docker/
+*.dockerfile.swp
 
 # ============================================
 # Python (AI Service)
